# apisix-python-client

./: README.md  pyproject.toml  setup.py
apsix-client1/: __init__.py  client.py
src/apisix-python-client_s1nju/: admin.py  control.py
